@startuml
skinparam classAttributeIconSize 0
skinparam packageStyle rectangle

title DTOs — Camada de Transporte de Dados

package "DTOs de Requisição" as REQ {

  class MesaRequestDTO {
    - Long restauranteId
    - String nomeCliente
  }

  class ComandaRequestDTO {
    - String clienteNome
    - List<ComandaItemRequestDTO> itens
  }

  class ComandaItemRequestDTO {
    - Long produtoId
    - Integer quantidade
  }

  class ItemCompartilhadoRequestDTO {
    - Long produtoId
    - Integer quantidade
    - String observacao
  }
}

package "DTOs de Resposta" as RES {

  class MesaResponseDTO {
    - Long id
    - String nomeCliente
    - StatusMesa status
    - LocalDateTime dataAbertura
    - Long restauranteId
    - String restauranteNome
    - List<ItemCompartilhadoResponseDTO> itensCompartilhados
  }

  class ComandaResponseDTO {
    - Long id
    - Long mesaId
    - String mesaNomeCliente
    - Long garcomId
    - String garcomNome
    - String clienteNome
    - StatusComanda status
    - LocalDateTime dataAbertura
    - LocalDateTime dataFechamento
    - BigDecimal valorTotal
    - List<ComandaItemResponseDTO> itens
    - List<ComandaRateioResponseDTO> rateios
  }

  class ComandaItemResponseDTO {
    - Long id
    - Long produtoId
    - String nomeProduto
    - Integer quantidade
    - BigDecimal precoUnitario
    - BigDecimal subtotal
  }

  class ItemCompartilhadoResponseDTO {
    - Long id
    - Long produtoId
    - String nomeProduto
    - Integer quantidade
    - BigDecimal precoUnitario
    - String observacao
  }
}

' ========== Composição entre DTOs ==========

ComandaRequestDTO "1" -- "*" ComandaItemRequestDTO : contém
ComandaResponseDTO "1" -- "*" ComandaItemResponseDTO : contém
MesaResponseDTO "1" -- "*" ItemCompartilhadoResponseDTO : agrega

' ========== Mapeamento para Entidades ==========

MesaRequestDTO --> Mesa : "mapeia para"
MesaResponseDTO --> Mesa : "resposta de"
ComandaRequestDTO --> Comanda : "mapeia para"
ComandaResponseDTO --> Comanda : "resposta de"
ComandaItemRequestDTO --> Produto : "referencia"
ComandaItemResponseDTO --> ComandaItem : "resposta de"
ItemCompartilhadoRequestDTO --> Produto : "referencia"
ItemCompartilhadoResponseDTO --> ItemCompartilhado : "resposta de"

note bottom of MesaResponseDTO
  Fluxo típico:
  Controller → Service → Repository → Entity → DTO
end note

@enduml
